# tinnyrenderer

./: .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  compile_commands.json  line.cpp  line.h  main.cpp  tags  triangle.cpp  triangle.h
cmake/: FindGLFW3.cmake
src/: Camera.cpp  Camera.h  main.cpp  math_3d.cpp  math_3d.h
tinyrenderer/: geometry.cpp  geometry.h
